@@ -1,3 +1,8 @@
+2009-04-07  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/38152
+	* gfortran.dg/proc_ptr_13.f90: Add "-g" option.
+
 2009-04-07  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/subp_elim_errors.ad[sb]: New test.
