@@ -1,5 +1,11 @@
 2009-04-07  Janus Weil  <janus@gcc.gnu.org>
 
+	PR fortran/38152
+	* trans-decl.c (gfc_get_symbol_decl): Correctly set decl location for
+	procedure pointer decls.
+
+2009-04-07  Janus Weil  <janus@gcc.gnu.org>
+
 	PR fortran/38290
 	* expr.c (gfc_check_pointer_assign): Enable interface check for
 	procedure pointers.
